<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/browsebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/browsebtn" />

    <TextView
        android:id="@+id/tvBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="250dp"
        android:text="@string/share"
        android:textColor="@color/option_item_tint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/browsebtn"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_web"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/discoverbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browsebtn" />

    <TextView
        android:id="@+id/tvDiscovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="180dp"
        android:text="@string/browse_news18"
        android:textColor="@color/option_item_tint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/discoverbtn"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_blocked"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverbtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="193dp"
        android:text="@string/block_news18"
        android:textColor="@color/option_item_tint_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/block"
        app:layout_constraintEnd_toEndOf="@+id/block"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/discoverbtn" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_thumb_down"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/showless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_less_of_such_content"
        android:textColor="@color/option_item_tint_color"
        android:textSize="18sp"
        android:layout_marginRight="93dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/showless"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_copyright"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showless" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textColor="@color/option_item_tint_color"
        android:textSize="18sp"
        android:layout_marginRight="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/report"
        app:layout_constraintEnd_toEndOf="@+id/report"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/showless" />

    <Button
        android:id="@+id/browsebtn"
        style="@style/AppTheme.OptionsBottomSheetButton"
        android:drawableStart="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/discoverbtn"
        style="@style/AppTheme.OptionsBottomSheetButton"
        android:drawableStart="@drawable/ic_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/browsebtn"
        app:layout_constraintTop_toBottomOf="@id/browsebtn" />


    <Button
        android:id="@+id/block"
        style="@style/AppTheme.OptionsBottomSheetButton"
        android:drawableStart="@drawable/ic_blocked"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/browsebtn"
        app:layout_constraintTop_toBottomOf="@id/discoverbtn" />

    <Button
        android:id="@+id/showless"
        style="@style/AppTheme.OptionsBottomSheetButton"
        android:drawableStart="@drawable/ic_thumb_down"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/browsebtn"
        app:layout_constraintTop_toBottomOf="@id/block" />

    <Button
        android:id="@+id/report"
        style="@style/AppTheme.OptionsBottomSheetButton"
        android:drawableStart="@drawable/ic_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/browsebtn"
        app:layout_constraintTop_toBottomOf="@id/showless" />
</androidx.constraintlayout.widget.ConstraintLayout>
